Add of mensurations on evolution's view

--- a/front/src/app/evolution/measurements-add-dialog/measurements-add-dialog.component.html
+++ b/front/src/app/evolution/measurements-add-dialog/measurements-add-dialog.component.html
@@ -1,39 +1,181 @@
 <div class="modal-dialog">
     <div class="modal-content">
+
         <div class="modal-header">
-            <button type="button" class="close" (click)="close()">&times;</button>
-            <h4 class="modal-title">{{title || 'Confirm'}}</h4>
-        </div>
-        <div class="modal-body">
-            <div class="pt-2">
-                <div class="form-group">
-                    <md-select class="col-md-8 offset-md-2" placeholder="Selectionnez une mensuration"
-                               [(ngModel)]="selectedValue" name="measurement">
-                        <md-option *ngFor="let measurement of measurementsList" [value]="measurement.value">
-                            {{measurement.name}}
-                        </md-option>
-                    </md-select>
-                </div>
-
-                <div class="form-group">
-                    <md-slider class="col-md-8 offset-md-2"
-                               [disabled]="false"
-                               [max]="100"
-                               [min]="10"
-                               [thumb-label]="true"
-                               [value]="value">
-                    </md-slider>
-                </div>
-
-                <div class="form-group">
-                    <label>
-                    </label>
-                </div>
+            <div class="text-center">
+                <h4 class="text-light-weight">{{title || 'Confirm'}}</h4>
             </div>
         </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-primary" (click)="confirm()">OK</button>
-            <button type="button" class="btn btn-default" (click)="close()">Cancel</button>
-        </div>
+        <form (ngSubmit)="confirm()" [formGroup]="measurementsForm">
+            <div class="modal-body">
+                <md-tab-group>
+                    <md-tab label="Général">
+                        <div class="row pt-2">
+                            <md-input-container class="col-md-12" color="primary" ngxErrors="size">
+                                <input id="inputSize" mdInput type="number"
+                                       placeholder="Taille"
+                                       formControlName="size"
+                                       required>
+                                <md-hint *ngIf="sizeCtrl.dirty && sizeCtrl.hasError('')"
+                                         class="form-control-feedback">{{errorTranslations.size.required}}
+                                </md-hint>
+                                <md-hint *ngIf="sizeCtrl.dirty && sizeCtrl.hasError('maxValue')"
+                                         class="form-control-feedback">{{errorTranslations.size.maxValue}}
+                                </md-hint>
+                                <md-hint *ngIf="sizeCtrl.dirty && sizeCtrl.hasError('minValue')"
+                                         class="form-control-feedback">{{errorTranslations.size.minValue}}
+                                </md-hint>
+                            </md-input-container>
+                        </div>
+                        <div class="row pt-2">
+                            <md-input-container class="col-md-12" color="primary" ngxErrors="weight">
+                                <input id="inputWeight" mdInput type="number"
+                                       placeholder="Poids"
+                                       formControlName="weight"
+                                       required>
+                                <md-hint *ngIf="weightCtrl.dirty && weightCtrl.hasError('')"
+                                         class="form-control-feedback">{{errorTranslations.weight.required}}
+                                </md-hint>
+                                <md-hint *ngIf="weightCtrl.dirty && weightCtrl.hasError('maxValue')"
+                                         class="form-control-feedback">{{errorTranslations.weight.maxValue}}
+                                </md-hint>
+                                <md-hint *ngIf="weightCtrl.dirty && weightCtrl.hasError('minValue')"
+                                         class="form-control-feedback">{{errorTranslations.weight.minValue}}
+                                </md-hint>
+                            </md-input-container>
+                        </div>
+                    </md-tab>
+                    <md-tab label="Haut du corps">
+                        <div class="row pt-2">
+                            <md-input-container class="col-md-12" color="primary" ngxErrors="chest">
+                                <input id="inputChest" mdInput type="number"
+                                       placeholder="Tour de poitrine"
+                                       formControlName="chest">
+                                <md-hint *ngIf="chestCtrl.dirty && chestCtrl.hasError('maxValue')"
+                                         class="form-control-feedback">{{errorTranslations.chest.maxValue}}
+                                </md-hint>
+                                <md-hint *ngIf="chestCtrl.dirty && chestCtrl.hasError('minValue')"
+                                         class="form-control-feedback">{{errorTranslations.chest.minValue}}
+                                </md-hint>
+                            </md-input-container>
+                        </div>
+                        <div class="row pt-2">
+                            <md-input-container class="col-md-12" color="primary" ngxErrors="waist">
+                                <input id="inputWaist" mdInput type="number"
+                                       placeholder="Tour de taille"
+                                       formControlName="waist">
+                                <md-hint *ngIf="waistCtrl.dirty && waistCtrl.hasError('maxValue')"
+                                         class="form-control-feedback">{{errorTranslations.waist.maxValue}}
+                                </md-hint>
+                                <md-hint *ngIf="waistCtrl.dirty && waistCtrl.hasError('minValue')"
+                                         class="form-control-feedback">{{errorTranslations.waist.minValue}}
+                                </md-hint>
+                            </md-input-container>
+                        </div>
+                        <div class="row pt-2">
+                            <md-input-container class="col-md-12" color="primary" ngxErrors="shoulders">
+                                <input id="inputShoulders" mdInput type="number"
+                                       placeholder="Epaules"
+                                       formControlName="shoulders">
+                                <md-hint *ngIf="shouldersCtrl.dirty && shouldersCtrl.hasError('maxValue')"
+                                         class="form-control-feedback">{{errorTranslations.shoulders.maxValue}}
+                                </md-hint>
+                                <md-hint *ngIf="shouldersCtrl.dirty && shouldersCtrl.hasError('minValue')"
+                                         class="form-control-feedback">{{errorTranslations.shoulders.minValue}}
+                                </md-hint>
+                            </md-input-container>
+                        </div>
+                        <div class="row pt-2">
+                            <md-input-container class="col-md-12" color="primary" ngxErrors="rightArm">
+                                <input id="inputRightArm" mdInput type="number"
+                                       placeholder="Bras droit"
+                                       formControlName="rightArm">
+                                <md-hint *ngIf="rightArmCtrl.dirty && rightArmCtrl.hasError('maxValue')"
+                                         class="form-control-feedback">{{errorTranslations.rightArm.maxValue}}
+                                </md-hint>
+                                <md-hint *ngIf="rightArmCtrl.dirty && rightArmCtrl.hasError('minValue')"
+                                         class="form-control-feedback">{{errorTranslations.rightArm.minValue}}
+                                </md-hint>
+                            </md-input-container>
+                        </div>
+                        <div class="row pt-2">
+                            <md-input-container class="col-md-12" color="primary" ngxErrors="leftArm">
+                                <input id="inputLeftArm" mdInput type="number"
+                                       placeholder="Bras gauche"
+                                       formControlName="leftArm">
+                                <md-hint *ngIf="rightArmCtrl.dirty && rightArmCtrl.hasError('maxValue')"
+                                         class="form-control-feedback">{{errorTranslations.leftArm.maxValue}}
+                                </md-hint>
+                                <md-hint *ngIf="rightArmCtrl.dirty && rightArmCtrl.hasError('minValue')"
+                                         class="form-control-feedback">{{errorTranslations.leftArm.minValue}}
+                                </md-hint>
+                            </md-input-container>
+                        </div>
+                    </md-tab>
+
+                    <md-tab label="Bas du corps">
+                        <div class="row pt-2">
+                            <md-input-container class="col-md-12" color="primary" ngxErrors="rightCalf">
+                                <input id="inputRightCalf" mdInput type="number"
+                                       placeholder="Mollet droit"
+                                       formControlName="rightCalf">
+                                <md-hint *ngIf="rightCalfCtrl.dirty && rightCalfCtrl.hasError('maxValue')"
+                                         class="form-control-feedback">{{errorTranslations.rightCalf.maxValue}}
+                                </md-hint>
+                                <md-hint *ngIf="rightCalfCtrl.dirty && rightCalfCtrl.hasError('minValue')"
+                                         class="form-control-feedback">{{errorTranslations.rightCalf.minValue}}
+                                </md-hint>
+                            </md-input-container>
+                        </div>
+                        <div class="row pt-2">
+                            <md-input-container class="col-md-12" color="primary" ngxErrors="leftCalf">
+                                <input id="inputLeftCalf" mdInput type="number"
+                                       placeholder="Mollet gauche"
+                                       formControlName="leftCalf">
+                                <md-hint *ngIf="rightArmCtrl.dirty && rightArmCtrl.hasError('maxValue')"
+                                         class="form-control-feedback">{{errorTranslations.leftCalf.maxValue}}
+                                </md-hint>
+                                <md-hint *ngIf="rightArmCtrl.dirty && rightArmCtrl.hasError('minValue')"
+                                         class="form-control-feedback">{{errorTranslations.leftCalf.minValue}}
+                                </md-hint>
+                            </md-input-container>
+                        </div>
+                        <div class="row pt-2">
+                            <md-input-container class="col-md-12" color="primary" ngxErrors="rightThigh">
+                                <input id="inputRightThigh" mdInput type="number"
+                                       placeholder="Cuisse droite"
+                                       formControlName="rightThigh">
+                                <md-hint *ngIf="rightThighCtrl.dirty && rightThighCtrl.hasError('maxValue')"
+                                         class="form-control-feedback">{{errorTranslations.rightThigh.maxValue}}
+                                </md-hint>
+                                <md-hint *ngIf="rightThighCtrl.dirty && rightThighCtrl.hasError('minValue')"
+                                         class="form-control-feedback">{{errorTranslations.rightThigh.minValue}}
+                                </md-hint>
+                            </md-input-container>
+                        </div>
+                        <div class="row pt-2">
+                            <md-input-container class="col-md-12" color="primary" ngxErrors="rightThigh">
+                                <input id="inputCuisseGauche" mdInput type="number"
+                                       placeholder="Cuisse gauche"
+                                       formControlName="leftThigh">
+                                <md-hint *ngIf="leftThighCtrl.dirty && leftThighCtrl.hasError('maxValue')"
+                                         class="form-control-feedback">{{errorTranslations.leftThigh.maxValue}}
+                                </md-hint>
+                                <md-hint *ngIf="leftThighCtrl.dirty && leftThighCtrl.hasError('minValue')"
+                                         class="form-control-feedback">{{errorTranslations.leftThigh.minValue}}
+                                </md-hint>
+                            </md-input-container>
+                        </div>
+                    </md-tab>
+                </md-tab-group>
+            </div>
+
+            <div class="modal-footer">
+                <button class="btn btn-primary" type="submit" [disabled]="measurementsForm.invalid">
+                    Enregistrer
+                </button>
+                <button type="button" class="btn btn-default" (click)="close()">Annuler</button>
+            </div>
+        </form>
     </div>
 </div>
