--- a/front/src/app/evolution/measurements-add-dialog/measurements-add-dialog.component.scss
+++ b/front/src/app/evolution/measurements-add-dialog/measurements-add-dialog.component.scss
@@ -1,6 +1,12 @@
 @import "../../../assets/style/colors";
 
+.modal {
+  background-color: $secondary-text !important;
+}
+
 .modal-header {
   background-color: $primary-color;
   color: #FFFFFF;
+  display: inline;
 }
+
