--- a/front/src/app/evolution/efficient-line-graph/efficient-line-graph.component.html
+++ b/front/src/app/evolution/efficient-line-graph/efficient-line-graph.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" [@fadeIn]>
     <div class="col-md-12">
         <md-card class="bg-secondary card-cascade efficient-line">
             <h4 class="text-center text-light-weight text-white">Mon Efficient Line</h4>
