--- a/front/src/app/evolution/evolution.component.html
+++ b/front/src/app/evolution/evolution.component.html
@@ -1,20 +1,21 @@
-<pulpe-page-title
-        [title]="'Votre évolution'">
-</pulpe-page-title>
-
-<div class="row card-cascade-parent">
-    <div class="col-md-12">
-        <md-card class="pt-0 white">
-            <div class="row">
-                <div class="col-md-4">
-                    <pulpe-measurements-list [measurements]="member.measurements">
-                    </pulpe-measurements-list>
+<div [@fadeIn]>
+    <pulpe-page-title
+            [title]="'Votre évolution'">
+    </pulpe-page-title>
+    <div class="row card-cascade-parent">
+        <div class="col-md-12">
+            <md-card class="pt-0 white">
+                <div class="row">
+                    <div class="col-md-4">
+                        <pulpe-measurements-list [measurements]="member.measurements">
+                        </pulpe-measurements-list>
+                    </div>
+                    <div class="col-md-8">
+                        <pulpe-efficient-line-graph>
+                        </pulpe-efficient-line-graph>
+                    </div>
                 </div>
-                <div class="col-md-8">
-                    <pulpe-efficient-line-graph>
-                    </pulpe-efficient-line-graph>
-                </div>
-            </div>
-        </md-card>
+            </md-card>
+        </div>
     </div>
 </div>
