Generation of program is fixed

--- a/front/src/app/program/program.component.html
+++ b/front/src/app/program/program.component.html
@@ -30,7 +30,7 @@
                 <hr class="w-100">
                 <div class="row">
                     <div class="col-md-12 text-center mt-md-4">
-                        <p class="lead text-center mb-0 text-white text-w-400">{{program.goal}}</p>
+                        <p class="lead text-center mb-0 text-white text-w-400">{{program.objective}}</p>
                         <img src="../../assets/img/exercise-types/strength-64.png" alt="Type">
                     </div>
                 </div>
