Implementation of coach (entity, services, controllers, guard, etc...)

--- a/front/src/app/shared/navbar/sidebar.component.html
+++ b/front/src/app/shared/navbar/sidebar.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="row pt-1">
             <div class="col-md-12 p-0">
-                <ul class="mynav">
+                <ul class="mynav" *ngIf="!profileService.profileIsCoach()">
                     <li class="sidebar-link">
                         <a [routerLinkActive]="['active']" [routerLink]="['profile', authenticationProfile.id]"
                            *ngIf="auth.authenticated() && profileService.profileIsCompleted()">
@@ -48,11 +48,33 @@
                             <span class="pl-4">Séances</span>
                         </a>
                     </li>
-                    <li class="sidebar-link">
+                    <!--<li class="sidebar-link">
                         <a [routerLinkActive]="['active']" routerLink="/accueil"
                            *ngIf="auth.authenticated() && profileService.profileIsCompleted()">
                             <i class="material-icons">photo_library</i>
                             <span class="pl-4">Timeline</span>
+                        </a>
+                    </li>-->
+                    <li class="sidebar-link">
+                        <a (click)="signout()" *ngIf="auth.authenticated()">
+                            <i class="material-icons">power_settings_new</i>
+                            <span class="pl-4">Déconnexion</span>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="mynav" *ngIf="profileService.profileIsCoach()">
+                    <li class="sidebar-link">
+                        <a [routerLinkActive]="['active']" [routerLink]="['profile', authenticationProfile.id]"
+                           *ngIf="auth.authenticated() && profileService.profileIsCompleted()">
+                            <i class="material-icons">person</i>
+                            <span class="pl-4">Mon profil</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-link">
+                        <a [routerLinkActive]="['active']" routerLink="/accueil"
+                           *ngIf="auth.authenticated() && profileService.profileIsCompleted()">
+                            <i class="material-icons">store</i>
+                            <span class="pl-4">Accueil</span>
                         </a>
                     </li>
                     <li class="sidebar-link">
