--- a/front/src/app/signup/signup.component.html
+++ b/front/src/app/signup/signup.component.html
@@ -46,7 +46,8 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <md-input-container class="col-7 col-md-8 offset-md-2 offset-3" ngxErrors="firstName">
+                                        <md-input-container class="col-7 col-md-8 offset-md-2 offset-3"
+                                                            ngxErrors="firstName">
                                             <input id="inputFirstName" mdInput
                                                    type="text"
                                                    placeholder="Saisissez votre prénom"
@@ -110,6 +111,13 @@
                                                 </md-hint>
                                             </md-input-container>
                                         </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <i class="col-md-1 offset-1 col-2 text-center fa fa-2x fa-id-badge prefix my-auto pr-0"></i>
+                                        <md-radio-group formControlName="isCoach" class="col-7 col-md-8">
+                                            <md-radio-button checked="true" value="member">Membre</md-radio-button>
+                                            <md-radio-button class="pl-4" value="coach">Coach</md-radio-button>
+                                        </md-radio-group>
                                     </div>
                                     <div class="form-group mb-3">
                                         <div class="offset-md-7 col-md-5 col-12 bottom-md-right">
