--- a/front/src/app/signin/signin.component.html
+++ b/front/src/app/signin/signin.component.html
@@ -62,6 +62,13 @@
                                         </md-input-container>
                                     </div>
                                     <div class="form-group">
+                                        <i class="col-md-1 offset-1 col-2 text-center fa fa-2x fa-id-badge prefix my-auto pr-0"></i>
+                                        <md-radio-group formControlName="isCoach" class="col-7 col-md-8">
+                                            <md-radio-button checked="true" value="member">Membre</md-radio-button>
+                                            <md-radio-button class="pl-4" value="coach">Coach</md-radio-button>
+                                        </md-radio-group>
+                                    </div>
+                                    <div class="form-group">
                                         <md-checkbox class="offset-md-2 col-md-10 offset-3 col-9"
                                                      formControlName="rememberMe">Se souvenir de moi
                                         </md-checkbox>
